--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -35,12 +35,12 @@
   ansible.builtin.systemd_service:
     name: dailyaidecheck.service
     enabled: true
-    masked: no
+    masked: false
 
 - name: "Unmask dailyaidecheck.timer"
   ansible.builtin.systemd_service:
     name: dailyaidecheck.timer
     enabled: true
-    masked: no
-    
+    masked: false
+
 ...
